Align avatars in members' activity streams. Fixes #3364
git-svn-id: https://buddypress.svn.wordpress.org/trunk@4849 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/bp-themes/bp-default/_inc/css/default-rtl.css
+++ b/bp-themes/bp-default/_inc/css/default-rtl.css
@@ -417,16 +417,6 @@ form#whats-new-form #whats-new-submit {
 	margin-right: 30px;
 	margin-left: 0;
 }
-.activity-list li.activity_comment .activity-avatar img.avatar,
-.activity-list li.activity_comment .activity-avatar img.FB_profile_pic {
-	margin-right: 10px;
-	margin-left: 0;
-}
-body.activity-permalink .activity-list li .activity-avatar img.avatar,
-body.activity-permalink .activity-list li .activity-avatar img.FB_profile_pic {
-	margin-left: auto;
-	margin-right: 0;
-}
 body.activity-permalink .activity-list li .activity-header > p {
 	margin-left: auto;
 	margin-right: -35px;
